--- a/AltoBem.API/appsettings.Development.json
+++ b/AltoBem.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "connectionString": "server=localhost,1433;database=ECommerce;User ID=SA;Password=dS47222381*"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
