--- a/AltoBem.API/appsettings.json
+++ b/AltoBem.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connectionString": "Server=localhost;Database=Ecommerce;User ID=SA;Password=dS47222381*;"
+    "connectionString": "server=localhost,1433;database=ECommerce;User ID=SA;Password=dS47222381*"
   },
   "Logging": {
     "LogLevel": {
